Mostly working now

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,7 +13,7 @@ const isProd = import.meta.env.ISPROD;
 var indevMsg = ``;
 
 if (!isProd) {
-  indevMsg = `<p class="grad font-bold">This is a development build, expect bugs and issues.</p>`;
+  indevMsg = `<p class="grad font-bold">This is a development build, expect bugs and issues. <a href="/account/login">login?</a></p>`;
 }
 ---
 
