--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import type { renderComponent } from "astro/compiler-runtime";
 import MainLayout from "../layouts/MainLayout.astro";
 // Component Imports
-import { Prism } from '@astrojs/prism';
+import { Prism } from "@astrojs/prism";
 
 // Full Astro Component Syntax:
 // https://docs.astro.build/core-concepts/astro-components/
@@ -13,9 +13,8 @@ import { Prism } from '@astrojs/prism';
     <h1><span title="Hey!">👋</span> I'm <span class="grad">Adam</span>.</h1>
     <h2 class="text-4xl pt-3">I'm a <span class="grad"><span id="age">23</span> year old</span> developer from the UK.</h2>
     <h3 class="text-3xl">
-      <type class="typewrite grad" data-period="2000" data-type='[ "I found this effect on StackOverflow", "I Make Websites", "I Maintain Servers", "I Write Discord Bots", "I write code for fun" ]'></type><noscript class="grad"
-        >I make Websites, Discord bots & write code in JS / TS</noscript
-      >
+      <type class="typewrite grad" data-period="2000" data-type='[ "I found this effect on StackOverflow", "I Make Websites", "I Maintain Servers", "I Write Discord Bots", "I write code for fun" ]'
+      ></type><noscript class="grad">I make Websites, Discord bots & write code in JS / TS</noscript>
     </h3>
 
     <p class="text-base pt-12">
@@ -42,7 +41,6 @@ import { Prism } from '@astrojs/prism';
     </a> -->
   </div>
 
-  
   <script>
     var TxtType = function (el, toRotate, period) {
       this.toRotate = toRotate;
@@ -126,7 +124,7 @@ import { Prism } from '@astrojs/prism';
       typeWrite();
     });
 
-    document.addEventListener("DOMContentLoaded", (event) =>{
+    document.addEventListener("DOMContentLoaded", (event) => {
       typeWrite();
     });
 
@@ -135,6 +133,5 @@ import { Prism } from '@astrojs/prism';
       var date = new Date("2000-04-04");
       ageElement.innerHTML = calculateAge(date).toString();
     }
-
   </script>
 </MainLayout>
