Check if oauth url exsists

--- a/src/pages/account/login.astro
+++ b/src/pages/account/login.astro
@@ -3,6 +3,8 @@ import MainLayout from "../../layouts/MainLayout.astro";
 import Link from "../../components/Link.astro";
 const url = import.meta.env.DISCORD_OAUTH_URL;
 
+console.log(`Discord OAuth URL: ${url}`);
+
 const linkId = "loginLink";
 const logOutId = "logOutText";
 
