Removing utils.js

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -41,7 +41,7 @@ if (!isProd) {
 </footer>
 
 <script>
-  import { is } from "../utils/utils";
+  import { is } from "../utils/is";
   function isChrome() {
     const isChromium = is.chrome;
     const hasTouchScreen = window.matchMedia("(hover: none)").matches;
