Added globalname to localstorage data

--- a/src/pages/api/auth/discord/callback.astro
+++ b/src/pages/api/auth/discord/callback.astro
@@ -55,6 +55,7 @@ console.log(userJson);
 const user = {
   id: userJson.id,
   username: userJson.username,
+  global_name: userJson.global_name,
   email: userJson.email,
   token: json.access_token,
   refresh_token: json.refresh_token,
