Confetti Buttons Pog

--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -33,7 +33,11 @@ import { ViewTransitions } from "astro:transitions";
   <meta property="twitter:url" content="https://imadam.io/" />
   <meta property="twitter:description" content={description} />
   <meta property="twitter:image" content="/assets/img/logos/logo-name-bottom-min-transparent.png" />
+
+  <!-- Jquery -->
+  <script src="https://code.jquery.com/jquery-4.0.0-beta.min.js" crossorigin="anonymous"></script>
+
   <title>{title}</title>
 
-  <ViewTransitions fallback="none"/>
+  <ViewTransitions fallback="none" />
 </head>
