--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,31 +1,26 @@
 ---
 interface Props {
-	title: string;
-	description?: string;
+  title: string;
+  description?: string;
 }
 
-var { 
-	title, 
-	description = `Hey I'm Adam\nI like to make cool web stuff. Come take a look!`
-} = Astro.props as Props;
+var { title, description = `Hey I'm Adam\nI like to make cool web stuff. Come take a look!` } = Astro.props as Props;
 
-const longTitle = `ImAdam.io • ${title}`
+const longTitle = `ImAdam.io • ${title}`;
 
-
-import '../styles/global.css'
-import Nav from '../components/Nav.astro';
-import Footer from '../components/Footer.astro'
-import Head from '../components/Head.astro'
+import "../styles/global.css";
+import Nav from "../components/Nav.astro";
+import Footer from "../components/Footer.astro";
+import Head from "../components/Head.astro";
 ---
 
 <html lang="en">
-	<Head title={longTitle} description={description}/>
-	<body class="h-screen bg-notblack">
-		<Nav />
+  <Head title={longTitle} description={description} />
+  <body class="h-screen bg-notblack">
+    <Nav />
 
-		<slot><div class="text-center pt-5 text-2xl">This is a default page, put some content here.</div></slot>
+    <slot><div class="text-center pt-5 text-2xl">This is a default page, put some content here.</div></slot>
 
-		<Footer />
-		
-	</body>
+    <Footer />
+  </body>
 </html>
