--- a/src/pages/api/auth/discord/callback.astro
+++ b/src/pages/api/auth/discord/callback.astro
@@ -49,7 +49,7 @@ if (json.error || res.status !== 200 || !json.access_token) {
 console.log("Token received from discord:");
 console.log(json);
 
-const userJson = await checkUser(json.access_token, ENDPOINT);
+const userJson = await checkUser(json.id, json.access_token, ENDPOINT);
 console.log(userJson);
 
 const user = {
@@ -74,15 +74,6 @@ const clientData = {
 <MainLayout title="Discord-Callback">
   <div class="text-center">
     <Link href="/" text="Login successful! Redirecting... If you are not redirected, click here" id={clientData.redirectLinkId} />
-    <ul>
-      {
-        Object.entries(user).map(([key, value]) => (
-          <li>
-            {key}: {value}
-          </li>
-        ))
-      }
-    </ul>
   </div>
 </MainLayout>
 <script define:vars={clientData}>
