Update email contact

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -4,6 +4,8 @@ import MainLayout from "../layouts/MainLayout.astro";
 
 // Full Astro Component Syntax:
 // https://docs.astro.build/core-concepts/astro-components/
+
+const email = "mailto:hey@imadam.io";
 ---
 
 <MainLayout title="Contact Me">
@@ -11,10 +13,10 @@ import MainLayout from "../layouts/MainLayout.astro";
   <div class="text-center pt-5 text-notwhite text-3xl">
     Come say hi!
     <div class="md:container md:mx-auto">
-    <p class="text-2xl pt-5">Do you like what I do or want to contact me? <br> You can <a class="grad" href="mailto:adam@lerndmina.dev">click here</a> to send me an email.</p>
+      <p class="text-2xl pt-5">Do you like what I do or want to contact me? <br /> You can <a class="grad" href={email}>click here</a> to send me an email.</p>
     </div>
     <div class="grid grid-flow-col auto-cols-auto justify-center pt-5">
-      <a href="mailto:adam@lerndmina.dev" target="_blank">
+      <a href={email} target="_blank">
         <div class="email-sprite m-2"></div>
       </a>
     </div>
