--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,6 @@
 ---
 import Link from "./Link.astro";
+import Status from "./Status.astro";
 
 var date = new Date();
 var dd = String(date.getDate()).padStart(2, "0");
@@ -29,14 +30,10 @@ if (!isProd) {
     <Link href="https://imadam.io" text="ImAdam.io" /> | Copyright &copy; <span id="copyright"></span> | All rights reserved
   </p>
   <p class="text-xs">
-    Built using <Link href="https://astro.build" text="AstroJS" /> 🚀 & <Link href="https://tailwindcss.com" text="TailwindCSS" /> | <Link
-      href="https://status.imadam.io"
-      text="Check out my status page"
-    /> | Last updated {today}
+    Built using <Link href="https://astro.build">AstroJS</Link> 🚀 & <Link href="https://tailwindcss.com">TailwindCSS</Link> | <Status /> | Last updated {today}
   </p>
   <p id="chrome-check" class="text-xs hidden max-w-sm text-center mx-auto">
-    <br /> This site is best viewed in a chromium browser due to my use of <Link href="https://caniuse.com/mdn-api_viewtransition" text="ViewTransitions" extraclasses="font-bold" /> for seamless page navigation.
-    During the next page refresh I will hide this message until the browser is closed. :)
+    <br /> This site is best viewed in a chromium browser due to my use of <Link href="https://caniuse.com/mdn-api_viewtransition" text="ViewTransitions" extraclasses="font-bold" /> for seamless page navigation. During the next page refresh I will hide this message until the browser is closed. :)
   </p>
 </footer>
 
@@ -73,7 +70,7 @@ if (!isProd) {
     () => {
       isChrome();
     },
-    { once: true }
+    { once: true },
   );
 
   document.addEventListener("astro:after-swap", () => {
