Removed fetch for service status

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -30,7 +30,7 @@ if (!isProd) {
     <Link href="https://imadam.io" text="ImAdam.io" /> | Copyright &copy; <span id="copyright"></span> | All rights reserved
   </p>
   <p class="text-xs">
-    Built using <Link href="https://astro.build">AstroJS</Link> 🚀 & <Link href="https://tailwindcss.com">TailwindCSS</Link> | <Status /> | Last updated {today}
+    Built using <Link href="https://astro.build">AstroJS</Link> 🚀 & <Link href="https://tailwindcss.com">TailwindCSS</Link> | <Link href="https://status.imadam.io">Service Status</Link> | Last updated {today}
   </p>
   <p id="chrome-check" class="text-xs hidden max-w-sm text-center mx-auto">
     <br /> This site is best viewed in a chromium browser due to my use of <Link href="https://caniuse.com/mdn-api_viewtransition" text="ViewTransitions" extraclasses="font-bold" /> for seamless page navigation. During the next page refresh I will hide this message until the browser is closed. :)
